.provarCaches/00D410000011HE0EAM/objects/rstkf__glhistrate__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glhistrate</customHelpPage>
    <description>glhistrate__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glhistrate_glacct__r.Name &amp;&quot;-&quot;&amp; rstkf__glhistrate_fromglyear__r.Name &amp;&quot;-&quot;&amp; TEXT(rstkf__glhistrate_fromperiod__c) &amp;&quot;-&quot;&amp; rstkf__glhistrate_parentcurr__r.Name &amp;&quot;-&quot;&amp; rstkf__glhistrate_subsidiarycurr__r.Name &amp;&quot;-&quot;&amp; TEXT(rstkf__glhistrate_purpose__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_Name__c</fullName>
        <description>GL Historical Rate Name</description>
        <label>GL Historical Rate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_fromglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The fiscal year in which this record first takes effect.</inlineHelpText>
        <label>Starting Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>GL Historical Rates</relationshipLabel>
        <relationshipName>glhistrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_fromperiod__c</fullName>
        <inlineHelpText>The period of Starting fiscal year in which this record first takes effect.</inlineHelpText>
        <label>Starting Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If For Translation or UFX? = Translation, Account will be a GL account to be translated at an historical rate. If For Translation or UFX? = UFX, Account must be a GL account having an Fx Type of Monetary Non-Cash.</inlineHelpText>
        <label>Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>GL Historical Rates</relationshipLabel>
        <relationshipName>glhistrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_histrate__c</fullName>
        <inlineHelpText>If For Translation or UFX? = Translation, this is the historical rate to be used to convert Subsidiary company currency to Parent company currency
If For Translation or UFX? = UFX, that was used to set the account&apos;s balance in Subsidiary company currency</inlineHelpText>
        <label>Rate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_parent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>If For Translation or UFX? = Translation, this is the company into which Subsidiary company will be consolidated. If For Translation or UFX? = UFX, Parent company and Subsidiary company will be the same.</inlineHelpText>
        <label>Parent Company if Translation</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>GL Historical Rates</relationshipLabel>
        <relationshipName>glhistrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_parentcurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The home currency of the parent company. If For Translation or UFX? = Translation, Parent company currency and Subsidiary company currency must be different. If For Translation or UFX? = UFX, they will be the same.</inlineHelpText>
        <label>Other Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>GL Historical Rates</relationshipLabel>
        <relationshipName>glhistrates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_purpose__c</fullName>
        <inlineHelpText>This object has two very different uses, and not all companies will need both or even one of them. The user must choose between Translation and UFX. The meanings of most of the rest of the fields change depending on whether Translation or UFX is chosen.</inlineHelpText>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Translation</fullName>
                </value>
                <value>
                    <fullName>UFX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_subsidiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If For Translation or UFX? = Translation, this is the company which will be consolidated into Parent company. If For Translation or UFX? = UFX, Parent company and Subsidiary company will be the same.</inlineHelpText>
        <label>Subsidiary Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>GL Historical Rates (Subsidiary Company)</relationshipLabel>
        <relationshipName>glhistrates_sub</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_subsidiarycurr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The home currency of the subsidiary company. If For Translation or UFX? = Translation, Parent company currency and Subsidiary company currency must be different. If For Translation or UFX? = UFX, they will be the same.</inlineHelpText>
        <label>Subsidiary Company Currency</label>
        <referenceTo>rstk__sycurr__c</referenceTo>
        <relationshipLabel>GL Historical Rates (Subsidiary Company Currency)</relationshipLabel>
        <relationshipName>glhistrates_sub</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_thruglyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Ending fiscal year is blank, this record will remain in effect indefinitely. It is usual for records to be entered with Ending fiscal year blank and for Ending fiscal year/period to be set when changing circumstances dictate that Rate should change.</inlineHelpText>
        <label>Ending Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>GL Historical Rates (Ending Fiscal Year)</relationshipLabel>
        <relationshipName>glhistrates_thru</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glhistrate_thruperiod__c</fullName>
        <inlineHelpText>Thus field is required if Ending fiscal year is not blank. If entered, Ending fiscal year/period must be no earlier than Starting fiscal year/period.</inlineHelpText>
        <label>Ending Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>GL Historical Rate</label>
    <listViews>
        <fullName>DT</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glhistrate_glacct__c</columns>
        <columns>rstkf__glhistrate_parentcurr__c</columns>
        <columns>rstkf__glhistrate_histrate__c</columns>
        <columns>rstkf__glhistrate_fromglyear__c</columns>
        <columns>rstkf__glhistrate_fromperiod__c</columns>
        <columns>rstkf__glhistrate_thruperiod__c</columns>
        <columns>rstkf__glhistrate_thruglyear__c</columns>
        <columns>rstkf__glhistrate_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glhistrate_subsidiary__c</field>
            <operation>contains</operation>
            <value>DT</value>
        </filters>
        <label>DT</label>
    </listViews>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glhistrate_glacct__c</columns>
        <columns>rstkf__glhistrate_parentcurr__c</columns>
        <columns>rstkf__glhistrate_histrate__c</columns>
        <columns>rstkf__glhistrate_fromglyear__c</columns>
        <columns>rstkf__glhistrate_fromperiod__c</columns>
        <columns>rstkf__glhistrate_thruperiod__c</columns>
        <columns>rstkf__glhistrate_thruglyear__c</columns>
        <columns>rstkf__glhistrate_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>GL Historical Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Historical Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>